hq sandbox - latest/src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Case_Category__c</fullName>
        <label>Case Category</label>
        <picklist>
            <picklistValues>
                <fullName>Chatter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create/Modify Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating/Modifying Fields</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Creating Views</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email Templates</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Apps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Import Wizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manage Users</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipeline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports + Dashboards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security Settings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workflow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Escalate_to__c</fullName>
        <label>Escalate to</label>
        <picklist>
            <picklistValues>
                <fullName>Eric Bouchard</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FbD_CM__Merge_To_Case__c</fullName>
        <label>Merge To Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Received_Email__c</fullName>
        <label>Last Received Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Sent_Email__c</fullName>
        <label>Last Sent Email</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Owner_ID__c</fullName>
        <formula>OwnerId</formula>
        <label>Owner ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Time_Open__c</fullName>
        <formula>ClosedDate -  CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Open</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>days_awaiting_response__c</fullName>
        <formula>Last_Sent_Email__c -  Last_Received_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days awaiting response</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <validationRules>
        <fullName>Contact_and_Account_Requirement</fullName>
        <active>false</active>
        <description>Before you can close a case you must assign a Contact &amp; Account to that case.</description>
        <errorConditionFormula>AND( CreatedDate  &lt; NOW(), Contact.LastName=&quot;&quot;,  Account.Name=&quot;&quot;)</errorConditionFormula>
        <errorMessage>In order to close a case you must enter a Contact or Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>If_case_not_data_migration_case_category</fullName>
        <active>false</active>
        <errorConditionFormula>and(  CreatedDate  &lt; Now()+0.01, Not(ispickval( Type , &quot;Data Migration&quot;)),  text(Case_Category__c)=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Case_Category__c</errorDisplayField>
        <errorMessage>You must enter a Case Category is the Case Reason is not Data Migration</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_Required</fullName>
        <active>false</active>
        <errorConditionFormula>and(  CreatedDate &lt; NOW()+0.01, text(Type)=&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>You must enter a type.</errorMessage>
    </validationRules>
</CustomObject>